# pyncview

./: .gitignore  README.md  license.rtf  multiplot.py  pyncview.py  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml
WiX/: buildmsi.py  exeinfo.wxi  pyncview.wxs  readme.md  readme.txt  vcredist.wxs
pyncview/: multiplot.py  pyncview.py
util/: compseries.py  printstats.py
